@@ -20,6 +20,7 @@
  */
 
 #include "part_sys.h"
+
 #include "phys_sim.h"
 #include "gl_util.h"
 #include "course_render.h"
@@ -49,138 +50,40 @@ frand()
     return double(rand())/RAND_MAX;
 }
 
-class Particle
+Particle::Particle(const ppogl::Vec3d& _pt, GLuint _binding, const ppogl::Vec3d& _vel)
+ : pt(_pt),
+   binding(_binding),
+   vel(_vel)
 {
-public:
-	static Particle* head;
-	static int numParticles;
-	
-	enum Types{
-		PARTICLE_TYPE_1=0,
-		PARTICLE_TYPE_2,
-		PARTICLE_TYPE_3,
-		PARTICLE_TYPE_4,
-		NUM_PARTICLE_TYPES
-	};
-
-	Particle(const ppogl::Vec3d& _pt,
-				GLuint _binding,
-				const ppogl::Vec3d& _vel)
-     : pt(_pt),
-	   binding(_binding),
-	   vel(_vel),
-	   next(head)
-	{
-		// attach ourself to the head
-		head = this;	
-		numParticles++;
+	type = Types(frand() * (double(NUM_PARTICLE_TYPES) - EPS));
 		
-		type = Types(frand() * (double(NUM_PARTICLE_TYPES) - EPS));
-		
-		base_size = ( frand() + 0.5 ) * OLD_PART_SIZE;
-		cur_size = NEW_PART_SIZE;
+	base_size = ( frand() + 0.5 ) * OLD_PART_SIZE;
+	cur_size = NEW_PART_SIZE;
 
-        age = frand() * MIN_AGE;
-        death = frand() * MAX_AGE;
-	}
-	
-	ppogl::Vec3d pt;
+	age = frand() * MIN_AGE;
+	death = frand() * MAX_AGE;
+}
 
-	Types type;
+//new stuff
+PartSys partsys[2];
 
-    double base_size;
-    double cur_size;
-    double terrain_height;
-    double age;
-    double death;
-    double alpha;
-    ppogl::Vec3d vel;
-	GLuint binding;
-    Particle *next;
-	
-};
-
-static ppogl::Color particleColor;
-
-Particle* Particle::head = NULL;
-int Particle::numParticles = 0;
+ppogl::Color PartSys::sm_color;
 
 void
-create_new_particles(const ppogl::Vec3d& loc, ppogl::Vec3d vel, int num, GLuint particle_binding) 
+PartSys::draw(const Player& plyr)
 {
-    // debug check to track down infinite particle bug 
-    //if(Particle::numParticles + num > MAX_PARTICLES){
-	//	PP_ERROR("maximum number of particles exceeded");
-    //}	
-	PP_REQUIRE(Particle::numParticles + num < MAX_PARTICLES, "Maximum number of particles exceeded");
-	
-	const double speed = vel.normalize();
-    for(int i=0; i<num; i++){      
-		Particle* newp = new Particle(
-				ppogl::Vec3d(
-					loc.x() + 2.*(frand() - 0.5) * START_RADIUS,
-        			loc.y(),
-        			loc.z() + 2.*(frand() - 0.5) * START_RADIUS
-				),
-				particle_binding,
-				(speed*vel)+ppogl::Vec3d(
-						VARIANCE_FACTOR * (frand() - 0.5) * speed, 
-						VARIANCE_FACTOR * (frand() - 0.5) * speed,
-						VARIANCE_FACTOR * (frand() - 0.5) * speed
-				)
-		);
-    }
-} 
-
-void
-update_particles(double time_step)
-{
-    Particle **p, *q;
-    double ycoord;
-
-    for (p = &Particle::head; *p != NULL; ) {
-        (**p).age += time_step;
-
-        if ( (**p).age < 0 ) continue;
-
-	(**p).pt = ( (**p).pt)+(time_step*(**p).vel );
-
-	ycoord = find_y_coord( (**p).pt.x(), (**p).pt.z() );
-
-	if ( (**p).pt.y() < ycoord - 3 ) {
-	    (**p).age = (**p).death + 1;
-	} 
-
-        if ( (**p).age >= (**p).death ) {
-            q = *p;
-            *p = q->next;
-            delete q;
-            Particle::numParticles--;
-            continue;
-        } 
-
-        (**p).alpha = ( (**p).death - (**p).age ) / (**p).death;
-
-	(**p).cur_size = NEW_PART_SIZE + 
-	    ( OLD_PART_SIZE - NEW_PART_SIZE ) * ( (**p).age / (**p).death );
-
-        (**p).vel.y() += -EARTH_GRAV * time_step;
-
-        p = &( (**p).next );
-    } 
-} 
-
-void
-draw_particles(const Player& plyr)
-{
-    ppogl::Vec2d min_tex_coord, max_tex_coord;
+	ppogl::Vec2d min_tex_coord, max_tex_coord;
     set_gl_options( PARTICLES );
     gl::TexEnv(GL_TEXTURE_ENV, GL_TEXTURE_ENV_MODE, GL_MODULATE);
 	
-    for(Particle *p=Particle::head; p!=NULL; p = p->next){
-        if(p->age < 0) continue;
-		gl::BindTexture(GL_TEXTURE_2D, p->binding);
-		if(p->type == 0 || p->type == 1){
+	std::list<Particle>::iterator it;	
+	
+    for(it=m_particles.begin(); it!=m_particles.end(); it++){
+        if((*it).age < 0) continue;
+		
+		gl::BindTexture(GL_TEXTURE_2D, (*it).binding);
+				
+		if((*it).type == 0 || (*it).type == 1){
 	    	min_tex_coord.y() = 0;
 	    	max_tex_coord.y() = 0.5;
 		}else{
@@ -188,7 +91,7 @@ draw_particles(const Player& plyr)
 		    max_tex_coord.y() = 1.0;
 		}
 
-		if(p->type == 0 || p->type == 3){
+		if((*it).type == 0 || (*it).type == 3){
 	    	min_tex_coord.x() = 0;
 	    	max_tex_coord.x() = 0.5;
 		}else{
@@ -196,36 +99,78 @@ draw_particles(const Player& plyr)
 	    	max_tex_coord.x() = 1.0;
 		}
 
-		gl::Color(particleColor, particleColor.a() * p->alpha);
+		gl::Color(sm_color, sm_color.a() * (*it).alpha);
 
-		draw_billboard(plyr, p->pt, p->cur_size, p->cur_size,
+		draw_billboard(plyr, (*it).pt, (*it).cur_size, (*it).cur_size,
 			min_tex_coord, max_tex_coord);
+    }
+}
+
+void
+PartSys::update(double timestep)
+{
+	std::list<Particle>::iterator it;
+    for(it=m_particles.begin(); it!=m_particles.end(); it++){
+        (*it).age += timestep;
+
+        if((*it).age < 0 ) continue;
+
+		(*it).pt = ( (*it).pt)+(timestep*(*it).vel );
+
+		const double ycoord = find_y_coord( (*it).pt.x(), (*it).pt.z() );
+
+		if( (*it).pt.y() < ycoord - 3 ){
+	   		(*it).age = (*it).death + 1;
+		} 
+
+        if( (*it).age >= (*it).death ){
+			it = m_particles.erase(it);
+            continue;
+        } 
+
+        (*it).alpha = ( (*it).death - (*it).age ) / (*it).death;
+
+		(*it).cur_size = NEW_PART_SIZE + 
+	    		(OLD_PART_SIZE - NEW_PART_SIZE) * ( (*it).age / (*it).death );
+
+        (*it).vel.y() += -EARTH_GRAV * timestep;
+    } 
+}
+
+void
+PartSys::createParticles(const ppogl::Vec3d& loc, const ppogl::Vec3d& vel, int num, GLuint particle_binding) 
+{
+	PP_REQUIRE(m_particles.size + num < MAX_PARTICLES, "Maximum number of particles exceeded");
+	
+	const double speed = vel.length();
+    for(int i=0; i<num; i++){      
+		m_particles.push_front(Particle(
+				ppogl::Vec3d(
+					loc.x() + 2.0*(frand() - 0.5) * START_RADIUS,
+        			loc.y(),
+        			loc.z() + 2.0*(frand() - 0.5) * START_RADIUS
+				),
+				particle_binding,
+				vel+ppogl::Vec3d(
+						VARIANCE_FACTOR * (frand() - 0.5) * speed, 
+						VARIANCE_FACTOR * (frand() - 0.5) * speed,
+						VARIANCE_FACTOR * (frand() - 0.5) * speed
+				)
+		));		
     }
 } 
 
 void
-clear_particles()
+PartSys::reset()
 {
-    Particle* q;
-    Particle* p=Particle::head;
-    for(;;){
-        if(p==NULL) break;
-        q=p;
-        p=p->next;
-        delete q;
-    } 
-	Particle::head = NULL;
-    Particle::numParticles = 0;
+	sm_color = ppogl::Color::white;
+	for(int i=0; i<2; i++){
+		partsys[i].m_particles.clear();
+	}		
 }
 
-void
-reset_particles()
-{
-	particleColor = ppogl::Color::white;
-} 
-
-static int
-particle_color_cb(ppogl::Script *vm)
+int
+PartSys::sqParticleColor(ppogl::Script *vm)
 {
     if(vm->getTop()!=1){
 		PP_WARNING("pptheme.particle_color: Invalid number of arguments");
@@ -235,7 +180,7 @@ particle_color_cb(ppogl::Script *vm)
 	vm->pushNull();
 	for(int i=0; i<4; i++){
 		vm->next(1);
-		particleColor.values[i]=vm->getFloat(-1);
+		PartSys::sm_color.values[i]=vm->getFloat(-1);
 		vm->pop();
 	}
 	
@@ -243,12 +188,12 @@ particle_color_cb(ppogl::Script *vm)
 }
 
 static const struct ppogl::Script::Lib ppthemelib[]={
-	{"particle_color", particle_color_cb},
+	{"particle_color", PartSys::sqParticleColor},
 	{NULL, NULL}
 };
 
 void
-register_particle_callbacks()
+PartSys::registerCallbacks()
 {
 	script.registerLib("pptheme", ppthemelib);
 }
